========================
   beancount: CHANGES
========================
Note: This file contains a list changes in the 'default' branch.


2018-10-25

  - Fixed unit test failure on BitBucket pipelines using a temp directory
    context manager.

  - Applied PR by Richard W to install the mixins package (install was broken).

  - Fixed #302: beancount.el does not fontify account names with single letter
    components (based on bug report by arianaut@).


2018-10-13

  - Fixed #158: Missing MIME type for QFX files.


2018-10-04

  - Merged new_ingest_mixins: Added new implementations of mixins for ingestion:

    * beancount.ingest.importers.mixins.identifier which implements identify().
    * beancount.ingest.importers.mixins.filing which implements file_account()
      and file_name().
    * beancount.ingest.importers.mixins.config which implement a simple schema
      with a configuration.

    These new mixins are intended to be more independent and more easily
    composable than the older ones. The beancount.ingest.importers.regexp has
    been removed. If you need it in interim, I made a copy under
    experiments/ingest/regexp.py.


* Version: 2.1.3

2018-10-04

  - Fixed #323: Escape strings in printer.

  - Minor bug fix for beancount.prices.price on null result.


2018-09-19

  - Removed TRUNCATE(), after realizing ROOT() can already do the same thing.


2018-09-18

  - Added TRUNCATE() function to SQL shell for Vikas Rawal.


2018-09-03

  - Added a parameter to the cmptest assertions to disable real booking and
    allow a weak local form of booking conversion that allows interpolation.
    (I'm using this in another project to assert some incomplete transactions.)


2018-08-30

  - Made assertions on entries off of the TestCase class, as free functions (so
    that they can be used in another project).


2018-08-26

  - Fixed tests for pipeline running pytest (somehow the curses functions fail,