@@ -97,7 +97,6 @@ def find_duplicate_entries(new_entries_list, existing_entries):
     Returns:
       A list of lists of modified new entries (like new_entries_list),
       potentially with modified metadata to indicate those which are duplicated.
-
     """
     mod_entries_list = []
     for key, new_entries in new_entries_list:
@@ -151,7 +150,8 @@ def extract(importer_config,
             entries=None,
             options_map=None,
             mindate=None,
-            ascending=True):
+            ascending=True,
+            detect_duplicates_func=None):
     """Given an importer configuration, search for files that can be imported in the
     list of files or directories, run the signature checks on them, and if it
     succeeds, run the importer on the file.
@@ -169,6 +169,10 @@ def extract(importer_config,
       mindate: Optional minimum date to output transactions for.
       ascending: A boolean, true to print entries in ascending order, false if
         descending is desired.
+      detect_duplicates_func: An optional function which accepts a list of
+        lists of imported entries and a list of entries already existing in
+        the user's ledger. See function find_duplicate_entries(), which is the
+        default implementation for this.
     """
     allow_none_for_tags_and_links = (
         options_map and options_map["allow_deprecated_none_for_tags_and_links"])
@@ -197,8 +201,9 @@ def extract(importer_config,
     # list of existing ones, or against each other. A single call to this
     # function is made on purpose, so that the function be able to merge
     # entries.
-    new_entries_list = find_duplicate_entries(
-        new_entries_list, entries)
+    if detect_duplicates_func is None:
+        detect_duplicates_func = find_duplicate_entries
+    new_entries_list = detect_duplicates_func(new_entries_list, entries)
     assert isinstance(new_entries_list, list)
     assert all(isinstance(new_entries, tuple) for new_entries in new_entries_list)
     assert all(isinstance(new_entries[0], str) for new_entries in new_entries_list)
@@ -231,7 +236,7 @@ def add_arguments(parser):
                         help='Write out the entries in descending order')
 
 
-def run(args, _, importers_list, files_or_directories):
+def run(args, _, importers_list, files_or_directories, detect_duplicates_func=None):
     """Run the subcommand."""
 
     # Load the ledger, if one is specified.
@@ -241,8 +246,11 @@ def run(args, _, importers_list, files_or_directories):
         entries, options_map = None, None
 
     extract(importers_list, files_or_directories, sys.stdout,
-            entries=entries, options_map=options_map,
-            mindate=None, ascending=args.ascending)
+            entries=entries,
+            options_map=options_map,
+            mindate=None,
+            ascending=args.ascending,
+            detect_duplicates_func=detect_duplicates_func)
     return 0
 
 
