@@ -4,6 +4,16 @@
 Note: This file contains a list changes in the 'default' branch.
 
 
+2018-10-26
+
+  - Fixed bug ingest that would cause relative filenames to fail.
+    See this thread for details:
+    https://groups.google.com/d/msgid/beancount/709141d5-88a4-444a-acef-94bf43a9b388%40googlegroups.com?utm_medium=email&utm_source=footer
+
+  - Fixed bug in ingest whereby the custom duplicates detection function wasn't
+    being called.
+
+
 2018-10-25
 
   - Fixed unit test failure on BitBucket pipelines using a temp directory
